# rescue-groups-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.docker.md  README.md  Taskfile.yml  build.rs  compose.yaml  config.toml.example  lcov.info  package-lock.json
.gemini/commands/: build-fix.toml  release-summary.toml  release.toml  test-fix.toml
.github/workflows/: ci.yml  docker.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/coverage_coveralls_20260214/: metadata.json
conductor/archive/increase_coverage_100_20260214/: index.md  metadata.json  spec.md
conductor/tracks/add_events_and_foster_20260118/: plan.md  spec.md
conductor/tracks/automated_release_20260119/: plan.md  spec.md
conductor/tracks/coverage_coveralls_20260214/: index.md  plan.md  spec.md
conductor/tracks/enhanced_search_filters_20260120/: plan.md
conductor/tracks/implement_lazy_loading_20260118/: plan.md  spec.md
conductor/tracks/increase_coverage_100_20260214/: plan.md
conductor/tracks/integration_testing_20260118/: plan.md  spec.md
conductor/tracks/mcp_optimization_20260215/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/more_metadata_tools_20260120/: plan.md
conductor/tracks/new_features_20260119/: plan.md  spec.md
conductor/tracks/new_features_verification_20260119/: plan.md
conductor/tracks/rate_limiting_20260119/: plan.md  spec.md
conductor/tracks/refine_error_async_20260117/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/telemetry_observability_20260120/: plan.md
conductor/tracks/unit_test_coverage_20260120/: plan.md
src/: cli.rs  client.rs  commands.rs  config.rs  error.rs  fmt.rs  main.rs  mcp.rs  server.rs
