[package]
name = "rescue-groups-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"
serde_yaml = "0.9" # Add this for YAML support

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false     # Disable incremental compilation for CI (often slower/buggy in CI cache)
debug = 0               # No debug info needed for basic CI checks (speeds up build)

# Profile for final production releases (smaller, faster)
[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link Time Optimization (smaller binary)
codegen-units = 1       # Reduce parallel code generation for better optimization
panic = "abort"         # Remove stack unwinding (smaller binary)
strip = true            # Strip symbols (smaller binary)
