[package]
name = "rescue-groups-mcp"
version = "0.4.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
clap_mangen = "0.2"
toml = "0.9"
serde_yaml = "0.9" # Add this for YAML support
moka = { version = "0.12", features = ["future"] }
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.2", features = ["trace"] }
tokio-stream = "0.1.18"
futures = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
governor = "0.10.4"
nonzero_ext = "0.3.0"

[dev-dependencies]
mockito = "1.4"

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false     # Disable incremental compilation for CI (often slower/buggy in CI cache)
debug = 0               # No debug info needed for basic CI checks (speeds up build)

# Profile for final production releases (smaller, faster)
[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link Time Optimization (smaller binary)
codegen-units = 1       # Reduce parallel code generation for better optimization
panic = "abort"         # Remove stack unwinding (smaller binary)
strip = true            # Strip symbols (smaller binary)
